@@ -12,13 +12,12 @@ import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
 
 import javax.swing.JPanel;
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
 
 import edu.colorado.phet.capacitorlab.CLConstants;
 import edu.colorado.phet.capacitorlab.CLPaints;
 import edu.colorado.phet.capacitorlab.CLStrings;
 import edu.colorado.phet.capacitorlab.model.BatteryCapacitorCircuit;
+import edu.colorado.phet.capacitorlab.model.BatteryCapacitorCircuit.BatteryCapacitorCirucitChangeListener;
 import edu.colorado.phet.common.phetcommon.util.DoubleRange;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
@@ -88,8 +87,8 @@ public class PlateChargeControlNode extends PhetPNode {
         range = new DoubleRange( -BatteryCapacitorCircuit.getMaxPlateCharge(), BatteryCapacitorCircuit.getMaxPlateCharge() );
         
         this.circuit = circuit;
-        circuit.addChangeListener( new ChangeListener() {
-            public void stateChanged( ChangeEvent e ) {
+        circuit.addBatteryCapacitorCirucitChangeListener( new BatteryCapacitorCirucitChangeListener() {
+            public void circuitChanged() {
                 if ( !circuit.isBatteryConnected() ) {
                     update();
                 }
