@@ -6,11 +6,9 @@ import java.awt.BasicStroke;
 import java.awt.Color;
 import java.awt.Stroke;
 
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
-
 import edu.colorado.phet.capacitorlab.CLPaints;
 import edu.colorado.phet.capacitorlab.model.*;
+import edu.colorado.phet.capacitorlab.model.BatteryCapacitorCircuit.BatteryCapacitorCirucitChangeListener;
 import edu.colorado.phet.capacitorlab.module.dielectric.DielectricModel;
 import edu.colorado.phet.capacitorlab.shapes.BatteryShapeFactory;
 import edu.colorado.phet.capacitorlab.shapes.CapacitorShapeFactory;
@@ -61,8 +59,8 @@ public class VoltageShapesDebugNode extends PComposite {
                     topTerminalNode.setPathTo( shapeFactory.createTopTerminalShape() );
                 }
             } );
-            circuit.addChangeListener( new ChangeListener() {
-                public void stateChanged( ChangeEvent event ) {
+            circuit.addBatteryCapacitorCirucitChangeListener( new BatteryCapacitorCirucitChangeListener() {
+                public void circuitChanged() {
                     bodyNode.setVisible( circuit.isBatteryConnected() );
                     topTerminalNode.setVisible( circuit.isBatteryConnected() );
                 }
@@ -118,8 +116,8 @@ public class VoltageShapesDebugNode extends PComposite {
                 }
             } );
             
-            circuit.addChangeListener( new ChangeListener() {
-                public void stateChanged( ChangeEvent event ) {
+            circuit.addBatteryCapacitorCirucitChangeListener( new BatteryCapacitorCirucitChangeListener() {
+                public void circuitChanged() {
                     topWireNode.setVisible( circuit.isBatteryConnected() );
                     bottomWireNode.setVisible( circuit.isBatteryConnected() );
                 }
