@@ -2,9 +2,7 @@
 
 package edu.colorado.phet.capacitorlab.model;
 
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
-
+import edu.colorado.phet.capacitorlab.model.BatteryCapacitorCircuit.BatteryCapacitorCirucitChangeListener;
 import edu.colorado.phet.common.phetcommon.math.Point3D;
 
 /**
@@ -16,8 +14,8 @@ public class CapacitanceMeter extends BarMeter {
 
     public CapacitanceMeter( final BatteryCapacitorCircuit circuit, World world, Point3D location, boolean visible ) {
         super( world, location, visible, circuit.getCapacitor().getTotalCapacitance() );
-        circuit.addChangeListener( new ChangeListener() {
-            public void stateChanged( ChangeEvent event ) {
+        circuit.addBatteryCapacitorCirucitChangeListener( new BatteryCapacitorCirucitChangeListener() {
+            public void circuitChanged() {
                 setValue( circuit.getCapacitor().getTotalCapacitance() );
             }
         });
